--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="footer">
                 <img src="images\qrcode.png" class="store_icon qrcode" alt="Coming soon on Google Play &amp; IOS APP Store">
                 <div class="big spacer cp_spacer"></div>
-                <div><a class="link" href="static/tnc.html" target="_blank">Terms &amp; Conditions</a> | <a class="link" href="static/privacypolicy.html" target="_blank">Privacy Policy</a></div>
+                <div><a class="link" href="https://onebanc.ai/static/tnc.html" target="_blank">Terms &amp; Conditions</a> | <a class="link" href="https://onebanc.ai/static/privacypolicy.html" target="_blank">Privacy Policy</a></div>
                 <div class="copyright">2021 © OneBanc Technologies Pvt. Ltd.</div>
                 <div class="spacer"></div>
             </div>
